# ChangeLog for dev-libs/fribidi
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/fribidi/ChangeLog,v 1.31 2007/05/08 18:53:39 grobian Exp $

  08 May 2007; Fabian Groffen <grobian@gentoo.org> fribidi-0.10.4.ebuild,
  fribidi-0.10.5.ebuild, fribidi-0.10.7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> fribidi-0.10.7.ebuild:
  Stable on Alpha.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> fribidi-0.10.7.ebuild:
  Stable on ia64.

  06 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> fribidi-0.10.7.ebuild:
  Stable on x86 wrt bug #131795.

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  fribidi-0.10.7.ebuild:
  hppa stable, bug #131795

  01 Oct 2006; Jason Wever <weeve@gentoo.org> fribidi-0.10.7.ebuild:
  Stable on SPARC wrt bug #131795.

  28 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  fribidi-0.10.7.ebuild:
  stable on ppc (Bug #131795)

  22 Sep 2006; <blubb@gentoo.org> fribidi-0.10.7.ebuild:
  stable on amd64

  22 Sep 2006; Fabian Groffen <grobian@gentoo.org> fribidi-0.10.7.ebuild:
  Marked ppc-macos stable (bug #131795)

  22 Sep 2006; Markus Rothe <corsair@gentoo.org> fribidi-0.10.7.ebuild:
  Stable on ppc64; bug #131795

  09 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> fribidi-0.10.7.ebuild:
  Add ~x86-fbsd keyword.

*fribidi-0.10.7 (11 Feb 2006)

  11 Feb 2006; MATSUU Takuto <matsuu@gentoo.org> +fribidi-0.10.7.ebuild:
  Version bumped.
  Removed darwin patch because it works on my ppc-macos without patch.

  09 Oct 2005; Fabian Groffen <grobian@gentoo.org>
  +files/fribidi-0.10.5-darwin.patch, fribidi-0.10.4.ebuild,
  fribidi-0.10.5.ebuild:
  - Removing conditional patching for ppc-macos
  - Fixing patch for 0.10.5
  - Fixing libtool/compilation for 0.10.5 on OSX
  - Removing ANNOUNCE from doc on 0.10.5 as dodoc complains it cannot find it

*fribidi-0.10.5 (22 Sep 2005)
