@@ -1,0 +1,3 @@
+MD5 647aee89079b056269ff0918dc1c6d28 fribidi-0.10.9.tar.gz 621563
+RMD160 31495fecd4318f9bd6217b015f65a936389c3204 fribidi-0.10.9.tar.gz 621563
+SHA256 b8fc7592f50bdac2182e9105e19fe54329faab35edbcf1bc66bde2e7174f87b4 fribidi-0.10.9.tar.gz 621563
